--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -66,11 +66,15 @@
 }
 
 .grid {
-  display: flex;
+  /* display: flex;
   align-items: center;
   justify-content: center;
   flex-wrap: wrap;
-  max-width: 800px;
+  max-width: 1500px;
+  background-color: #0070f3; */
+  display: grid;
+  grid-template-columns: auto auto;
+
 }
 
 .card {
@@ -112,6 +116,7 @@
   .grid {
     width: 100%;
     flex-direction: column;
+    grid-template-columns: auto;
   }
 }
 
