--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -3,13 +3,13 @@
 }
 
 .main {
-  min-height: 100vh;
+  /* min-height: 100vh;
   padding: 4rem 0;
   flex: 1;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
+  align-items: center; */
 }
 
 .footer {
@@ -112,6 +112,13 @@
   margin-left: 0.5rem;
 }
 
+
+.chart-container {
+  min-width: 45vw;
+  min-height: 45vh;
+  background-color: aqua;
+}
+
 @media (max-width: 600px) {
   .grid {
     width: 100%;
@@ -120,7 +127,7 @@
   }
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   .card,
   .footer {
     border-color: #222;
@@ -131,4 +138,5 @@
   .logo img {
     filter: invert(1);
   }
-}
+} */
+
