--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,15 +1,14 @@
 .container {
-  padding: 0 2rem;
+  padding: 0 1rem;
 }
 
 .main {
-  /* min-height: 100vh;
-  padding: 4rem 0;
+  min-height: 100vh;
+  padding: 0rem 0rem;
   flex: 1;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center; */
 }
 
 .footer {
@@ -65,18 +64,6 @@
     Bitstream Vera Sans Mono, Courier New, monospace;
 }
 
-.grid {
-  /* display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  max-width: 1500px;
-  background-color: #0070f3; */
-  display: grid;
-  grid-template-columns: auto auto;
-
-}
-
 .card {
   margin: 1rem;
   padding: 1.5rem;
@@ -96,28 +83,11 @@
   border-color: #0070f3;
 }
 
-.card h2 {
-  margin: 0 0 1rem 0;
-  font-size: 1.5rem;
-}
-
-.card p {
-  margin: 0;
-  font-size: 1.25rem;
-  line-height: 1.5;
-}
-
 .logo {
   height: 1em;
   margin-left: 0.5rem;
 }
 
-
-.chart-container {
-  min-width: 45vw;
-  min-height: 45vh;
-  background-color: aqua;
-}
 
 @media (max-width: 600px) {
   .grid {
@@ -126,17 +96,3 @@
     grid-template-columns: auto;
   }
 }
-
-/* @media (prefers-color-scheme: dark) {
-  .card,
-  .footer {
-    border-color: #222;
-  }
-  .code {
-    background: #111;
-  }
-  .logo img {
-    filter: invert(1);
-  }
-} */
-
