--- a/components/DateRangePicker/DateRangePicker.module.css
+++ b/components/DateRangePicker/DateRangePicker.module.css
@@ -5,7 +5,7 @@
     justify-content: center;
     align-items: center;
     border-color: #9a9a9a;
-    color: #8ef300;
+    color: #fcfcfc;
     border-width: 1px;
     border-radius: 5px;
 }
